--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <meta name="description" content="I strive to build technologies that truly work for people and make a difference.">
   <link rel="canonical" href="https://www.jasonduan.com/">
 
-  <title> JasonDuan - Software Engineer, Tireless Explorer, Lifelong Learner </title>
+  <title>Jason Duan</title>
 
-  <!--Favicons-->
+  <!-- Favicons -->
   <link rel="shortcut icon" href="icon.png">
   <link rel="apple-touch-icon" href="icon.png">
   <link rel="apple-touch-icon" sizes="72x72" href="icon.png">
@@ -58,8 +58,8 @@
       <ul class="social-list">
         <li><a href="https://github.com/Zaf1ro" target="_blank" class="fa fa-github"></a></li>
         <li><a href="https://www.linkedin.com/in/jason-duan/" target="_blank" class="fa fa-linkedin"></a></li>
-        <li><a href="https://www.facebook.com/JasonDuan" target="_blank" class="fa fa-facebook"></a></li>
-      </ul>
+				<li><a href="http://zaf1ro.github.io/" target="_blank" class="fa fa-edit"></a></li>
+			</ul>
 
       <!-- Navigation Desktop -->
 
@@ -96,7 +96,7 @@
           <div class="col-md-6 text-left-md">
             <h1 class="home-title rev-color">People, Technology, and Everything in Between</h1>
             <div class="lead-hr wow fadeInLeft"></div>
-            <p class="lead wow fadeInUp leadText rev-color" data-wow-delay="0.3s">I strive to build technologies that<br> truly work for people and make a difference.</p>
+            <p class="lead wow fadeInUp leadText rev-color" data-wow-delay="0.3s">I hear and I forget.<br>I see and I remember.<br>I do and I understand.</p>
           </div>
           <!--<div class="col-md-6 text-right-md"><a href="http://www.youtube.com/watch?v=ANwf8AE3_d0" class="icon-home-video js-video-play wow fadeInRight" data-wow-delay="0.6s"><i class="ion-ios-play"></i></a></div>-->
         </div>
@@ -157,11 +157,11 @@
 				<div class="section-content ">
 					<div class="row-base row ">
 						<div class="col-stat col-base col-sm-6 col-md-3 ">
-							<div class="stat-number " data-value="3.80 ">0.00</div>
-							/4.0 UW GPA
+							<div class="stat-number " data-value="3.60 ">0.00</div>
+							/4.0 GPA
 						</div>
 						<div class="col-stat col-base col-sm-6 col-md-3 ">
-							<div class="stat-number " data-value="1180 ">0</div>
+							<div class="stat-number " data-value="500">0</div>
 							Contributions on GitHub
 						</div>
 						<div class="col-stat col-base col-sm-6 col-md-3 ">
