--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title> leontaolong - Software Engineer, Tireless Explorer, Lifelong Learner </title>
+  <title>Jiaxu Duan</title>
 
   <!--Favicons-->
   <link rel="shortcut icon" href="icon.png">
@@ -48,7 +48,7 @@
       <ul class="social-list">
         <li><a href="https://github.com/Zaf1ro" target="_blank" class="fa fa-github"></a></li>
         <li><a href="https://www.linkbedin.com/in/jason-duan/" target="_blank" class="fa fa-linkedin"></a></li>
-        <li><a href="https://www.facebook.com/JasonDuan" target="_blank" class="fa fa-facebook"></a></li>
+        <li><a href="http://zaf1ro.github.io/" target="_blank" class="fa fa-edit"></a></li>
       </ul>
 
       <!-- Navigation Desktop -->
@@ -83,7 +83,7 @@
     <div class="container">
       <div class="opener">
         <h1>Code, Design, and More</h1>
-        <p class="lead">I’m driven to utilize my design thinking and technical skills to make the world around us somewhat better.</p>
+        <p class="lead">Nothing great in the world has ever been accomplished without passion.</p>
       </div>
     </div>
     <div class="mouse-helper">
