--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <head>
 <meta  charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Virgo. - Multipurpose HTML Template</title> 
+<title>Jiaxu Duan</title>
 
 <!-- Favicons -->
 <link rel="shortcut icon" href="favicon.png">
@@ -31,217 +31,48 @@
 
     <header class="navbar">
       <div>
-        <a href="#" class="brand js-target-scroll">
-          Virgo.
+        <a href="./index.html" class="brand js-target-scroll">
+          Jason Duan
         </a>
 
         <!-- Navbar Collapse -->
 
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#nav-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#nav-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
 
         <ul class="social-list">
-          <li><a href="" class="fa fa-facebook"></a></li>
-          <li><a href="" class="fa fa-twitter"></a></li>
-          <li><a href="" class="fa fa-linkedin"></a></li>
-          <li><a href="" class="fa fa-instagram"></a></li>
-        </ul>  
-      
-        <!-- Navigation Desctop -->
+          <li><a href="https://github.com/Zaf1ro" target="_blank" class="fa fa-github"></a></li>
+          <li><a href="https://www.linkedin.com/in/jason-duan/" target="_blank" class="fa fa-linkedin"></a></li>
+					<li><a href="http://zaf1ro.github.io/" target="_blank" class="fa fa-edit"></a></li>
+        </ul>
+
+        <!-- Navigation Desktop -->
 
         <nav class="nav-desctop hidden-xs hidden-sm">
           <ul class="nav-desctop-list">
-            <li>
-              <a href="#">Home</a>
-              <ul>
-                <li>
-                  <a href="home-agency.html">Agency</a>
-                  <ul>
-                    <li><a href="home-agency.html">Agency 1 - Classic</a></li>
-                    <li><a href="home-agency2.html">Agency 2 - creative</a></li>
-                    <li><a href="home-agency3.html">Agency 3 - image</a></li>
-                    <li><a href="home-agency4.html">Agency 4 - Video</a></li>
-                  </ul>
-                </li>
-                <li><a href="home-business.html">Business</a></li>
-                <li>
-                  <a href="home-freelance.html">Freelance</a>
-                  <ul>
-                    <li><a href="home-freelance.html">Freelance - Dark</a></li>
-                    <li><a href="home-freelance-light.html">Freelance - Light</a></li>
-                  </ul>
-                </li>
-                <li><a href="home-startup.html">Startup</a></li>
-                <li><a href="home-portfolio.html">Portfolio</a></li>
-                <li><a href="home-elegant.html">Elegant</a></li>
-                <li><a href="home-architecture.html">Architecture</a></li>
-                <li><a href="home-interior.html">Interior</a></li>
-              </ul>
-            </li>
-            <li class="active">
-              <a href="#">Pages</a>
-              <ul>
-                <li>
-                  <a href="about.html">About</a>
-                  <ul>
-                    <li><a href="about.html">About 1</a></li>
-                    <li><a href="about2.html">About 2</a></li>
-                  </ul>
-                </li>
-                <li>
-                  <a href="services.html">Services</a>
-                  <ul>
-                    <li><a href="services.html">Services 1</a></li>
-                    <li><a href="services2.html">Services 2</a></li>
-                  </ul>
-                </li>
-                <li>
-                  <a href="portfolio.html">Portfolio</a>
-                  <ul>
-                    <li><a href="portfolio.html">Portfolio 1</a></li>
-                    <li><a href="portfolio2.html">Portfolio 2</a></li>
-                    <li><a href="portfolio3.html">Portfolio 3</a></li>
-                    <li><a href="portfolio4.html">Portfolio 4</a></li>
-                  </ul>
-                </li>
-                <li>
-                  <a href="portfolio-details.html">Portfolio details</a>
-                  <ul>
-                    <li><a href="portfolio-details.html">Portfolio details 1</a></li>
-                    <li><a href="portfolio-details2.html">Portfolio details 2</a></li>
-                  </ul>
-                </li>
-                <li><a href="comming-soon.html">Comming-soon</a></li>
-                <li class="active"><a href="404.html">404</a></li>
-              </ul>
-            </li>
-            <li>
-              <a href="blog.html">Blog</a>
-              <ul>
-                <li>
-                  <a href="blog.html">Blog list</a>
-                  <ul>
-                    <li><a href="blog.html">Blog list 1</a></li>
-                    <li><a href="blog-columns2.html">Blog list 2</a></li>
-                    <li><a href="blog-columns3.html">Blog list 3</a></li>
-                  </ul>
-                </li>
-                <li><a href="blog-sidebar.html">Blog sidebar</a></li>
-                <li><a href="blog-post.html">Blog details</a></li>
-              </ul>
-            </li>  
-            <li><a href="shortcodes.html">Shortcodes</a></li>  
-            <li>
-              <a href="contacts.html">Contacts</a>
-              <ul>
-                <li><a href="contacts.html">Contacts 1</a></li>
-                <li><a href="contacts2.html">Contacts 2</a></li>
-                <li><a href="contacts3.html">Contacts 3</a></li>
-              </ul>
-            </li>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./about.html">About Me</a></li>
+            <li><a href="./portfolio.html">Projects</a></li>
+            <li><a href="Resume_Leon_Tao_Long.pdf" target="_blank">Resume</a></li>
           </ul>
         </nav>
 
         <!-- Navigation Mobile -->
 
         <nav class="nav-mobile hidden-md hidden-lg">
-          <div class="collapse navbar-collapse" id="nav-collapse"> 
+          <div class="collapse navbar-collapse" id="nav-collapse">
             <ul class="nav-mobile-list">
-              <li>
-                <a href="#">Home <i class="fa fa-angle-down"></i></a>
-                <ul>
-                  <li>
-                    <a href="#">Agency <i class="fa fa-angle-down"></i></a>
-                    <ul>
-                      <li><a href="home-agency.html">Agency 1 - Classic</a></li>
-                      <li><a href="home-agency2.html">Agency 2 - creative</a></li>
-                      <li><a href="home-agency3.html">Agency 3 - image</a></li>
-                      <li><a href="home-agency4.html">Agency 4 - Video</a></li>
-                    </ul>
-                  </li>
-                  <li><a href="home-business.html">Business</a></li>
-                  <li>
-                    <a href="home-freelance.html">Freelance</a>
-                    <ul>
-                      <li><a href="home-freelance.html">Freelance - Dark</a></li>
-                      <li><a href="home-freelance-light.html">Freelance - Light</a></li>
-                    </ul>
-                  </li>
-                  <li><a href="home-startup.html">Startup</a></li>
-                  <li><a href="home-portfolio.html">Portfolio</a></li>
-                  <li><a href="home-elegant.html">Elegant</a></li>
-                  <li><a href="home-architecture.html">Architecture</a></li>
-                  <li><a href="home-interior.html">Interior</a></li>
-                </ul>
-              </li>
-              <li class="active">
-                <a href="#">Pages <i class="fa fa-angle-down"></i></a>
-                <ul>
-                  <li>
-                    <a href="#">About <i class="fa fa-angle-down"></i></a>
-                    <ul>
-                      <li><a href="about.html">About 1</a></li>
-                      <li><a href="about2.html">About 2</a></li>
-                    </ul>
-                  </li>
-                  <li>
-                    <a href="#">Services <i class="fa fa-angle-down"></i></a>
-                    <ul>
-                      <li><a href="services.html">Services 1</a></li>
-                      <li><a href="services2.html">Services 2</a></li>
-                    </ul>
-                  </li>
-                  <li>
-                    <a href="#">Portfolio <i class="fa fa-angle-down"></i></a>
-                    <ul>
-                      <li><a href="portfolio.html">Portfolio 1</a></li>
-                      <li><a href="portfolio2.html">Portfolio 2</a></li>
-                      <li><a href="portfolio3.html">Portfolio 3</a></li>
-                      <li><a href="portfolio4.html">Portfolio 4</a></li>
-                    </ul>
-                  </li>
-                  <li>
-                    <a href="#">Portfolio details <i class="fa fa-angle-down"></i></a>
-                    <ul>
-                      <li><a href="portfolio-details.html">Portfolio details 1</a></li>
-                      <li><a href="portfolio-details2.html">Portfolio details 2</a></li>
-                    </ul>
-                  </li>
-                  <li><a href="comming-soon.html">Comming-soon</a></li>
-                  <li class="active"><a href="404.html">404</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="#">Blog <i class="fa fa-angle-down"></i></a>
-                <ul>
-                  <li>
-                    <a href="#">Blog list <i class="fa fa-angle-down"></i></a>
-                    <ul>
-                      <li><a href="blog.html">Blog list 1</a></li>
-                      <li><a href="blog-columns2.html">Blog list 2</a></li>
-                      <li><a href="blog-columns3.html">Blog list 3</a></li>
-                    </ul>
-                  </li>
-                  <li><a href="blog-sidebar.html">Blog sidebar</a></li>
-                  <li><a href="blog-post.html">Blog details</a></li>
-                </ul>
-              </li>  
-              <li><a href="shortcodes.html">Shortcodes</a></li>  
-              <li>
-                <a href="#">Contacts <i class="fa fa-angle-down"></i></a>
-                <ul>
-                  <li><a href="contacts.html">Contacts 1</a></li>
-                  <li><a href="contacts2.html">Contacts 2</a></li>
-                  <li><a href="contacts3.html">Contacts 3</a></li>
-                </ul>
-              </li>
+              <li><a href="./index.html">Home</a></li>
+              <li><a href="./about.html">About Me</a></li>
+              <li><a href="./portfolio.html">Projects</a></li>
+              <li><a href="./Resume_Leon_Tao_Long.pdf" target="_blank">Resume</a></li>
             </ul>
           </div>
-        </nav> 
+        </nav>
       </div>
     </header>
     
@@ -251,8 +82,8 @@
       <div class="container">
         <div class="opener">
           <h1>Oops... You got lost.</h1>
-          <p class="lead">We receive result combining marketing, a creative and industry experience.</p>
-          <a href="agency.html" class="btn">back home</a>
+          <p class="lead">An unexamined life is not worth living.</p>
+          <a href="index.html" class="btn">back home</a>
         </div>
       </div>
     </main>
@@ -261,54 +92,35 @@
   
       <!-- Footer -->
 
-      <footer id="footer" class="footer bg-dark">     
-        <div class="container">
-          <div class="row-base row">
-            <div class="brand-info col-base col-sm-6 col-md-4">
-              <a href="#top" class="brand js-target-scroll">
-                Virgo.
+      <footer id="footer " class="footer footer-1 bg-dark ">
+        <div class="container ">
+          <div class="row-base row ">
+            <div class="brand-info col-base col-sm-6 col-md-5 ">
+              <a href="#top " class="brand js-target-scroll ">
+                Jason Duan
               </a>
-              <p>We create web products for the help and growth of your business.</p>
+              <p>Software Engineer, <br/> Tireless Explorer,<br/> and Lifelong Learner</p>
             </div>
-            <div class="col-base col-sm-6 col-md-2">
-              <ul class="nav-bottom">
-                <li><a href="">Home</a></li>
-                <li><a href="">Features</a></li>
-                <li><a href="">Pages</a></li>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">Blog</a></li>
-                <li><a href="">Contacts</a></li>
+            <div class="col-base col-sm-6 col-md-3 footer-row ">
+              <ul class="nav-bottom ">
+                <li><a href="./index.html ">Home</a></li>
+                <li><a href="./about.html ">About</a></li>
+                <li><a href="./portfolio.html ">Projects</a></li>
+                <li><a href="Resume_Leon_Tao_Long.pdf" target="_blank">Resume</a></li>
               </ul>
             </div>
-            <div class="col-contacts col-base col-sm-6 col-md-3">
-              <a href="tel:88005553535" class="phone">+8 800 555 35 35</a><br>
-              <a href="mailto:info@virgo.com" class="email">info@virgo.com</a>
-            </div>
-            <div class="col-subscribe col-base col-sm-6 col-md-3">
-              <div class="subscribe-title">Subscribe to our newsletter</div>
-              <form class="subscribe-form js-subscribe-form">
-                <div class="input-group">
-                  <input id="mc-email" type="email" class="input-round form-control" placeholder="Email">
-                  <span class="input-group-btn">
-                    <button class="btn" type="submit"><span class="arrow-right"></span></button>
-                  </span>
-                </div>
-                <label class="mc-label" for="mc-email" id="mc-notification"></label>
-              </form>
+            <div class="col-contacts col-base col-sm-6 col-md-3 footer-row2 ">
+              <a href="tel:14252836889" class="phone footer-last">+1 425 283 6889</a><br>
+              <a href="mailto:duan_jason@outlool.com" class="email footer-last">duan_jason@outlook.com</a><br>
+              <a href="https://www.google.com/maps/place/Stevens+Institute+of+Technology/@40.7448624,-74.0346548,15.66z" target="_blank " class="footer-last">Hoboken, NJ, 07030</a> <br/>
             </div>
           </div>
         </div>
-        <div class="footer-bottom">
-          <div class="container">
-              <div class="copyrights">
-              © Copyright 2016 Virgo. All Rights Reserved
-              </div>
-              <ul class="social-list">
-                <li><a href="" class="fa fa-facebook"></a></li>
-                <li><a href="" class="fa fa-twitter"></a></li>
-                <li><a href="" class="fa fa-linkedin"></a></li>
-                <li><a href="" class="fa fa-instagram"></a></li>
-              </ul>  
+        <div class="footer-bottom ">
+          <div class="container ">
+            <div class="copyrights ">
+              © Copyright 2017 Jason Duan. All Rights Reserved
+            </div>
           </div>
         </div>
       </footer>
