--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title> JasonDuan - Software Engineer, Tireless Explorer, Lifelong Learner </title>
+  <title> Jason Duan</title>
 
   <!--Favicons-->
   <link rel="shortcut icon" href="icon.png">
@@ -48,7 +48,7 @@
       <ul class="social-list">
         <li><a href="https://github.com/Zaf1ro" target="_blank" class="fa fa-github"></a></li>
         <li><a href="https://www.linkedin.com/in/jason-duan/" target="_blank" class="fa fa-linkedin"></a></li>
-        <li><a href="https://www.facebook.com/JasonDuan" target="_blank" class="fa fa-facebook"></a></li>
+				<li><a href="http://zaf1ro.github.io/" target="_blank" class="fa fa-edit"></a></li>
       </ul>
 
       <!-- Navigation Desktop -->
@@ -98,8 +98,8 @@
   <main class="main main-inner main-about" data-stellar-background-ratio="0.8">
     <div class="container">
       <div class="opener">
-        <h1 contentEditable role="textbox" aria-multiline="true" class="rev-color">About Me</h1>
-        <p class="lead rev-color">Software Engineer, Tireless Explorer, and Lifelong Learner</p>
+        <h1 contentEditable role="textbox" aria-multiline="true">About Me</h1>
+        <p class="lead rev-color">We are what we repeatedly do. Excellence, then, is not an act, but a habit.</p>
       </div>
     </div>
     <div class="mouse-helper">
@@ -181,40 +181,30 @@
       </div>
     </section>
 
-    <section class="section pb-0">
+    <section class="section bg-dark pb-0">
       <div class="container text-center">
         <div class="row">
           <header class="text-center col-md-8 col-md-offset-2">
-            <h2 class="section-title-2">Education</h2>
+            <h2 class="section-title-2 color-w1-font">Education</h2>
           </header>
         </div>
-        <div class="about-entry wow fadeInUp">
+        <div class="about-entry wow"> <!-- fadeInUp -->
           <div class="blog-info">
-            <div class="blog-rubric">2015 - 2019</div>
+            <div class="blog-rubric">2017 - 2019</div>
             <h2 class="blog-title">
-              <a href="http://ischool.uw.edu/" target="_blank">University of Washington iSchool</a>
+              <a href="https://www.stevens.edu/" class="color-w2-font" target="_blank">Stevens Institute of Technology</a>
             </h2>
-            <p class="">B.S. in Informatics, Software Engineering Concentration <br/> GPA: 3.80/4.0, Annual Dean's List</p>
+            <p class="">M.S. in Computer Science<br/> GPA: 3.62/4.0</p>
           </div>
         </div>
 
-        <div class="about-entry wow fadeInUp ata-wow-delay=">
+        <div class="about-entry wow  ata-wow-delay="> <!-- fadeInUp -->
           <div class="blog-info ">
-            <div class="blog-rubric ">2014 Summer</div>
+            <div class="blog-rubric ">2011 - 2015</div>
             <h2 class="blog-title ">
-              <a href="http://www.brown.edu/ " target="_blank ">Brown University</a>
+              <a href="http://english.qdu.edu.cn/" class="color-w2-font" target="_blank ">Qingdao University</a>
             </h2>
             <p class=" ">Summer Program, Design and Engineering Coursework</p>
-          </div>
-        </div>
-
-        <div class="about-entry-last wow fadeInUp ata-wow-delay=">
-          <div class="blog-info">
-            <div class="blog-rubric">2012 - 2015</div>
-            <h2 class="blog-title">
-              <a href="http://www.cqfls.cn" target="_blank">Chongqing Foreign Language School</a>
-            </h2>
-            <p style="margin-bottom:0;">AP High School Diploma</p>
           </div>
         </div>
 
