fix linkedin url

--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,7 @@
 
       <ul class="social-list">
         <li><a href="https://github.com/Zaf1ro" target="_blank" class="fa fa-github"></a></li>
-        <li><a href="https://www.linkbedin.com/in/jason-duan/" target="_blank" class="fa fa-linkedin"></a></li>
+        <li><a href="https://www.linkedin.com/in/jason-duan/" target="_blank" class="fa fa-linkedin"></a></li>
         <li><a href="http://zaf1ro.github.io/" target="_blank" class="fa fa-edit"></a></li>
       </ul>
 
