--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
             <a href="./portfolio.html">Projects</a>
           </li>
           <li>
-            <a href="Resume_Leon_Tao_Long.pdf" target="_blank">Resume</a>
+            <a href="Resume_Jason_Duan.pdf" target="_blank">Resume</a>
           </li>
         </ul>
       </nav>
@@ -85,7 +85,7 @@
               <a href="./portfolio.html">Projects</a>
             </li>
             <li>
-              <a href="./Resume_Leon_Tao_Long.pdf" target="_blank">Resume</a>
+              <a href="./Resume_Jason_Duan.pdf" target="_blank">Resume</a>
             </li>
           </ul>
         </div>
@@ -110,7 +110,7 @@
 
   <div class="content">
 
-    <!-- Mission -->
+    <!-- Skill sets -->
     <section class="events section bg-light">
       <div class="container">
         <h2 class="section-title text-center" style="margin-top:0;">Skill Set</h2>
@@ -126,8 +126,8 @@
                     <h4 class="widget-title">Web & Mobile</h4>
                     <div class="blog-tags">
                       <a>Andorid</a><a>HTML5</a><a>CSS3</a><a>Javascript</a>
-                      <a>React.js</a><a>jQuery</a><a>React Native</a><a>Vue.js</a><a>AJAX</a><a>ES7</a><a>Websocket</a>
-                      <a>Node.js</a><a>HTTPS</a><a>OAuth</a>
+                      <a>React.js</a><a>jQuery</a><a>AJAX</a><a>Node.js</a>
+                      <a>Git</a><a>Hadoop</a><a>ES7</a><a>HTTPS</a><a>OAuth</a>
                     </div>
                   </div>
                 </div>
@@ -140,8 +140,9 @@
                   <div class="widget widget_tags">
                     <h4 class="widget-title">Programming</h4>
                     <div class="blog-tags">
-                      <a>Java</a><a>Python</a><a>Golang</a><a>C/C++</a><a>Typescript</a><a>Kotlin</a>
-                      <a>Abstract Data Type</a><a>Algorithms</a><a>Concurrency</a><a>Paradigms</a><a>Debugging</a>
+                      <a>C/C++</a><a>Java</a><a>Python</a><a>R</a>
+                      <a>Matlab</a><a>LaTeX</a><a>Concurrency</a>
+                      <a>Algorithms</a><a>Paradigms</a><a>Debugging</a>
                     </div>
                   </div>
                 </div>
@@ -154,8 +155,9 @@
                   <div class="widget widget_tags">
                     <h4 class="widget-title">Server & DB</h4>
                     <div class="blog-tags">
-                      <a>Linux</a><a>Docker</a><a>Shell Scripting</a><a>Redis</a><a>SQL Server</a>
-                      <a>MySQL</a><a>Postgres</a><a>MongoDB</a><a>Firebase</a><a>AWS</a><a>DigitalOcean</a><a>Deployment</a>
+                      <a>Linux</a><a>Docker</a><a>MongoDB</a>
+                      <a>Redis</a><a>MySQL</a><a>PostgreSQL</a>
+                      <a>AWS</a><a>Shell Scripting</a><a>Deployment</a>
                     </div>
                   </div>
                 </div>
@@ -168,8 +170,9 @@
                   <div class="widget widget_tags">
                     <h4 class="widget-title">Architecture</h4>
                     <div class="blog-tags">
-                      <a>Documentation</a><a>Abstraction</a><a>Modelling (UML)</a><a>Design Patterns</a><a>Refactorization</a><a>Architectural Styles</a>
-                      <a>MVC</a><a>N-Tier</a><a>RESTful</a><a>Flux</a>
+                      <a>System Architecture</a><a>Abstraction</a><a>Modelling(UML)</a>
+                      <a>Design Patterns</a><a>Refactorization</a><a>Architectural Styles</a>
+                      <a>MVC</a><a>RESTful</a>
                     </div>
                   </div>
                 </div>
@@ -181,20 +184,21 @@
       </div>
     </section>
 
-    <section class="section bg-dark pb-0">
+    <!-- Education -->
+    <section class="section pb-0">
       <div class="container text-center">
         <div class="row">
           <header class="text-center col-md-8 col-md-offset-2">
-            <h2 class="section-title-2 color-w1-font">Education</h2>
+            <h2 class="section-title-2">Education</h2>
           </header>
         </div>
         <div class="about-entry wow"> <!-- fadeInUp -->
           <div class="blog-info">
-            <div class="blog-rubric">2017 - 2019</div>
+            <div class="blog-rubric">Expected May 2019</div>
             <h2 class="blog-title">
-              <a href="https://www.stevens.edu/" class="color-w2-font" target="_blank">Stevens Institute of Technology</a>
+              <a href="https://www.stevens.edu/" target="_blank">Stevens Institute of Technology</a>
             </h2>
-            <p class="">M.S. in Computer Science<br/> GPA: 3.62/4.0</p>
+            <p class="">MS in Computer Science<br/> GPA: 3.89/4.0</p>
           </div>
         </div>
 
@@ -202,9 +206,9 @@
           <div class="blog-info ">
             <div class="blog-rubric ">2011 - 2015</div>
             <h2 class="blog-title ">
-              <a href="http://english.qdu.edu.cn/" class="color-w2-font" target="_blank ">Qingdao University</a>
+              <a href="http://english.qdu.edu.cn/" target="_blank ">Qingdao University</a>
             </h2>
-            <p class=" ">Summer Program, Design and Engineering Coursework</p>
+            <p class=" ">BS in Computer Science</p>
           </div>
         </div>
 
@@ -212,27 +216,60 @@
     </section>
 
     <!-- Courses -->
-
-    <section class="section pb-0">
-      <div class="container text-center">
-        <div class="row">
-          <div class="seperator"></div>
-          <header class="text-center col-md-8 col-md-offset-2">
-            <h2 class="section-title-2">Coursework</h2>
-          </header>
-        </div>
-        <div class="widget widget_tags">
-          <div class="blog-tags">
-            <a>Computer Programming I & II</a><a>Data Structures and Algorithms</a><a>Software Architecture</a>
-            <a>Web Development</a><a>Database Systems</a><a>Mobile Development (Android & iOS)</a><a>Server Development</a>
-            <a>Data Science</a><a>Information visualization</a><a>User Experience</a><a>Information Systems</a><a>Design Thinking</a><a>Project Management</a>
+    <section class="events section bg-light">
+      <div class="container">
+        <h2 class="section-title text-center" style="margin-top:0;">Coursework</h2>
+      </div>
+      <div class="section-content" style="margin-top:4.5em;">
+        <div class="container">
+          <div class="row-base row">
+            <div class="col-event col-base col-md-6 wow fadeInLeft">
+              <div class="event bg-white">
+                <div class="event-content">
+                  <div class="widget widget_tags">
+                    <h4 class="widget-title">Undergraduate</h4>
+                    <div class="blog-tags">
+                      <a>Data Structures and Algorithms</a>
+                      <a>Operating Systems</a>
+                      <a>Web Programming(Python)</a>
+                      <a>Information Systems</a>
+                      <a>Database Management Systems</a>
+                      <a>Unix Tools and Scripting</a>
+                      <a>Software Architecture</a>
+                      <a>Software Architecture</a>
+                      <a>User Experience</a>
+                      <a>Information visualization</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-event col-base col-md-6 wow fadeInLeft" data-wow-delay="0.3s">
+              <div class="event bg-white">
+                <div class="event-content">
+                  <div class="widget widget_tags">
+                    <h4 class="widget-title">Graduate</h4>
+                    <div class="blog-tags">
+                      <a>Pattern Recognition & Classific</a>
+                      <a>Concurrent Programming</a>
+                      <a>TCP/IP Networking</a>
+                      <a>Data Mining and Analysis</a>
+                      <a>Mobile Systems and Applications</a>
+                      <a>Server Development</a>
+                      <a>Advanced Data Structures</a>
+                      <a>Intro to Machine learning</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </section>
 
-    <!-- Experience -->
 
+    <!-- Experience -->
     <section class="section bg-light events">
       <div class="container">
         <div class="row">
@@ -246,87 +283,38 @@
 
           <div class="about-entry wow fadeInUp">
             <div class="">
-              <h2 class="experience-title">
-                President | Technology and Business Association, UW Chapter | June 2017 - Present
+              <h2 style="margin: 0; padding: 0; line-height: 1.4em;" class="experience-title">
+                HANLON FINANCIAL SYSTEM LAB | SHIFT Project, Software Developer
               </h2>
-              <p class="experience-content"><span class="bullet">•</span> Provide a platform for people to exchange ideas about technology and business and 
-              bridge university and the industries</p>
-              <p class="experience-content"><span class="bullet">•</span> Currently have 1,600 members and 30 officers. Elected from Marketing & IT Officer to VP, and promoted to President</p>
-              <p class="experience-content"><span class="bullet">•</span> Plan and orgainze large-scale career-related networking and mentorship events and job/internship workshops</p>
+              <p style="margin-bottom: 0; padding:0; font-size: 0.9em;" class="blog-rubric"> Apr 2018 – Now | Hoboken, NJ </p>
+              <p class="experience-content"><span class="bullet">•</span> Used FIX protocol (via QuickFIX library) to communicate between frontend and backend modules.</p>
+              <p class="experience-content"><span class="bullet">•</span> Resolved multithreading issues and wrong fields of FIX(Financial Information eXchange) message.</p>
+              <p class="experience-content"><span class="bullet">•</span> Implemented design pattern to decrease execution time by 30%.</p>
+              <p class="experience-content"><span class="bullet">•</span> Splitted download part into multiple threads and reduced loading time by 50%.</p>
             </div>
           </div>
 
           <div class="about-entry wow fadeInUp">
             <div class="">
-              <h2 class="experience-title">
-                Software Engineer | RestMesh Technologies, LLC | Redmond WA | Nov 2016 - Present
+              <h2 style="margin: 0; padding: 0; line-height: 1.4em;" class="experience-title">
+                GREENET INFORMATION CO. | Software Engineer
               </h2>
-              <p class="experience-content"><span class="bullet">•</span> Work with senior devs from Microsoft in the cloud-based IT solutions startup’s
-                core team as a full stack engineer</p>
-              <p class="experience-content"><span class="bullet">•</span> Refine and implement responsive UIs for the core product that runs on Web and
-                Mobile using Material Design, build Server-Side APIs and data analytical tools in Node.js, MySQL, and Vue.js</p>
-              <p class="experience-content"><span class="bullet">•</span> Test and troubleshoot full-stack code, enforce MVC and Server-Clinet software
-                architecture, develop new features in the core product of restaurant management software based on feedback
-                from 20+ clients</p>
+              <p style="margin-bottom: 0; padding:0; font-size: 0.9em;" class="blog-rubric"> Aug 2015 – Feb 2017 | Beijing, China </p>
+              <p class="experience-content"><span class="bullet">•</span> Worked on DPI(Deep Packet Inspection), interpretation, and troubleshooting with HTTP/HTTPS proxies. </p>
+              <p class="experience-content"><span class="bullet">•</span> Performed distributed architecture to optimize the query procedure. </p>
+              <p class="experience-content"><span class="bullet">•</span> Improved the accuracy of checking for malicious code and spam by 25%. </p>
             </div>
           </div>
 
           <div class="about-entry wow fadeInUp">
             <div class="">
-              <h2 class="experience-title">
-                Mobile Development Intern | Yumso, Inc. | Seattle WA | June 2017 - Present
+              <h2 style="margin: 0; padding: 0; line-height: 1.4em;" class="experience-title">
+                CISCO | Software Engineer Intern
               </h2>
-              <p class="experience-content"><span class="bullet">•</span> Work in the core team of the tech startup as a mobile development intern</p>
-              <p class="experience-content"><span class="bullet">•</span> Implement a set of newly-designed UIs for the product's 2.0 version update on the iOS platform using React Native </p>
-              <!--<p class="experience-content"><span class="bullet">•</span> Test and troubleshoot full-stack code, enforce MVC and Server-Clinet software
-                architecture, develope new features in the core product of restuart management software based on feedback
-                from 20+ clients</p>-->
-            </div>
-          </div>
-
-          <div class="about-entry wow fadeInUp">
-            <div class="">
-              <h2 class="experience-title">
-                After School Tutor | Seattle Chinese Information and Service Center | Sept 2015 - Dec 2015
-              </h2>
-              <p class="experience-content"><span class="bullet">•</span> Tutored fourth grade ESL kids with their English and Math coursework twice a week</p>
-              <p class="experience-content"><span class="bullet">•</span> Provided help and supports during each week's computer lab reading session</p>
-              <p class="experience-content"><span class="bullet">•</span> Volunteered in events and activities within the Seattle Internation District Community</p>
-            </div>
-          </div>
-
-          <div class="about-entry wow fadeInUp">
-            <div class="">
-              <h2 class="experience-title">
-                Director | Department of Science and Technologies | CQFLS | Sept 2012 - June 2014 
-              </h2>
-              <p class="experience-content"><span class="bullet">•</span> Led a department of twelve students to complete various tasks such as executing 
-              large-scale science and technology festival, all multi-media related tasks for school events such as videos, powerpoints, and posters</p>
-              <p class="experience-content"><span class="bullet">•</span> Developed expertise with various software and multi-media euipment</p>
-              <p class="experience-content"><span class="bullet">•</span> Received Annual Best Department Award in 2013</p>
-            </div>
-          </div>
-
-          <div class="about-entry wow fadeInUp">
-            <div class="">
-              <h2 class="experience-title">
-                Founder & CEO | One Pound Inc. | May 2011 - May 2013  
-              </h2>
-              <p class="experience-content"><span class="bullet">•</span> Founded this microenterprise at school in Junior 3 along with 4 other 
-              classmates to provide added services to students</p>
-              <p class="experience-content"><span class="bullet">•</span> Services included: selling pencils and erasers, re-charging meal cards, tutoring and class notes, and banking services</p>
-              <p class="experience-content"><span class="bullet">•</span> In the end, generated over 500 USD in profit and donated the entire amount to the UNICEF</p>
-            </div>
-          </div>
-
-          <div class="about-entry wow fadeInUp">
-            <div class="">
-              <h2 class="experience-title">
-                Volunteer English Teacher | Mugen Primary School | April 2013  
-              </h2>
-              <p class="experience-content"><span class="bullet">•</span> Developed curriculum and taught 6th grade students basic English skills in Wulong County in rural Chongqing outskirts</p>
-              <p class="experience-content"><span class="bullet">•</span> Walked four hours a day to school and back, experiencing the life of impoverishment for those in rural areas</p>
-              <p class="experience-content"><span class="bullet">•</span> Lived with students and families for one week, still maintain communications with students to give them encouragement </p>
+              <p style="margin-bottom: 0; padding:0; font-size: 0.9em;" class="blog-rubric"> Feb 2015 – Jul 2015 | Beijing, China </p>
+              <p class="experience-content"><span class="bullet">•</span> Worked on editing, designing and construction of web pages for hosting service using HTML5 and CSS3. </p>
+              <p class="experience-content"><span class="bullet">•</span> Improved UI/UX interface for customer experience and fixed bugs. </p>
+              <p class="experience-content"><span class="bullet">•</span> All code was reviewed, perfected, and pushed to production. </p>
             </div>
           </div>
 
@@ -334,17 +322,15 @@
       </div>
     </section>
 
-    <!-- Banner -->
-
+    <!-- Resume -->
     <section class="promo bg-primary section-sm">
       <div class="container">
         <h2 class="promo-title">Download PDF Resume</h2>
-        <a href="Resume_Leon_Tao_Long.pdf" target="_blank" class="btn btn-violet wow swing">See Resume</a>
+        <a href="Resume_Jason_Duan.pdf" target="_blank" class="btn btn-violet wow swing">See Resume</a>
       </div>
     </section>
 
     <!-- Footer -->
-
     <footer id="footer " class="footer footer-1 bg-dark ">
       <div class="container ">
         <div class="row-base row ">
@@ -359,7 +345,7 @@
               <li><a href="./index.html ">Home</a></li>
               <li><a href="./about.html ">About</a></li>
               <li><a href="./portfolio.html ">Projects</a></li>
-              <li><a href="Resume_Leon_Tao_Long.pdf" target="_blank">Resume</a></li>
+              <li><a href="Resume_Jason_Duan.pdf" target="_blank">Resume</a></li>
             </ul>
           </div>
           <div class="col-contacts col-base col-sm-6 col-md-3 footer-row2 ">
@@ -379,8 +365,8 @@
     </footer>
   </div>
 
-  <!-- Modals -->
 
+  <!-- Modals -->
   <div id="request" class="modal fade" role="dialog">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -409,8 +395,8 @@
     </div>
   </div>
 
-  <!-- Modals success -->
 
+  <!-- Modals success -->
   <div id="success" class="modal modal-message fade" role="dialog">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -423,8 +409,8 @@
     </div>
   </div>
 
-  <!-- Modals error -->
 
+  <!-- Modals error -->
   <div id="error" class="modal modal-message fade" role="dialog">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -437,8 +423,8 @@
     </div>
   </div>
 
-  <!-- SCRIPTS -->
 
+  <!-- SCRIPTS -->
   <script src="js/jquery.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/smoothscroll.js"></script>
@@ -451,9 +437,11 @@
   <script src="js/isotope.pkgd.min.js"></script>
   <script src="js/imagesloaded.pkgd.js"></script>
 
+
   <!-- SLIDER REVOLUTION -->
   <script src="js/rev-slider/jquery.themepunch.tools.min.js"></script>
   <script src="js/rev-slider/jquery.themepunch.revolution.min.js"></script>
+
 
   <!-- SLIDER REVOLUTION 5x EXTENSIONS   -->
   <script src="js/rev-slider/revolution.extension.actions.min.js"></script>
