--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <meta property="title" content="Jason Duan - ">
   <meta property="type" content="website">
   <meta property="description" content="I strive to build technologies that truly work for people and make a difference.">
-  <meta property="url" content="https://www.jasonduan.com">
+  <meta property="url" content="http://duan.engineer">
   <meta property="locale" content="en_US">
 
   <meta name="description" content="I strive to build technologies that truly work for people and make a difference.">
-  <link rel="canonical" href="https://www.jasonduan.com/">
+  <link rel="canonical" href="http://duan.engineer/">
 
   <title>Jason Duan</title>
 
@@ -68,7 +68,7 @@
           <li class="active"><a href="./index.html">Home</a></li>
           <li><a href="./about.html">About Me</a></li>
           <li><a href="./portfolio.html">Projects</a></li>
-          <li><a href="Resume_Leon_Tao_Long.pdf" target="_blank">Resume</a></li>
+          <li><a href="Resume_Jason_Duan.pdf" target="_blank">Resume</a></li>
         </ul>
       </nav>
 
@@ -80,7 +80,7 @@
             <li class="active"><a href="./index.html">Home</a></li>
             <li><a href="./about.html">About Me</a></li>
             <li><a href="./portfolio.html">Projects</a></li>
-            <li><a href="./Resume_Leon_Tao_Long.pdf" target="_blank">Resume</a></li>
+            <li><a href="./Resume_Jason_Duan.pdf" target="_blank">Resume</a></li>
           </ul>
         </div>
       </nav>
@@ -111,7 +111,6 @@
   <div class="content">
 
     <!-- About -->
-
     <section class="about section">
       <div class="container">
         <h2 class="section-title text-left text-dark wow fadeInLeft">I am a—<span class="fade-title">I am a</span></h2>
@@ -122,20 +121,21 @@
         </div>
         <div class="row-about row">
           <div class="col-md-4 col-md-offset-3">
-            <p style="font-size:1.1em; color:#4b4b4b;">I'm Leon, a junior studying Informatics with a concentration on Software Engineering at the University of Washington
-              Information School. I'm also long-term interning at local tech startups as full-stack engineer and serving
-              as the President of Technology and Business Association UW Chapter.</p>
+            <p style="font-size:1.1em; color:#4b4b4b;">I'm Jason, a master student studying Computer Science at the Stevens Institute of Technology.
+              My experience includes major responsibility of Linux programming and academic projects with server-side technology
+              with up-to-date technologies and architectural implementation.
+              </p>
           </div>
           <div class="col-md-4">
             <p style="font-size:1.1em; color:#4b4b4b;">As I take assorted courses at school and work in the industry, I find it most fascinating to tackle new
-              challenges by hacking my way through undiscovered fields and picking up new skills as I go. Curiosity, flexibility, and versatility are the things I value very much and seek to hold on to as long as possible.</p>
+              challenges by hacking my way through undiscovered fields and picking up new skills as I go.
+              And I have extraordinary fast learning ability and enthusiastic intention on novel techniques.  </p>
           </div>
         </div>
       </div>
     </section>
 
     <!-- Statisticts -->
-
     <section class="statistics bg-dark section">
       <div class="container ">
         <div class="row ">
@@ -154,43 +154,39 @@
           </header>
         </div>
 
-				<div class="section-content ">
-					<div class="row-base row ">
-						<div class="col-stat col-base col-sm-6 col-md-3 ">
-							<div class="stat-number " data-value="3.60 ">0.00</div>
-							/4.0 GPA
-						</div>
-						<div class="col-stat col-base col-sm-6 col-md-3 ">
-							<div class="stat-number " data-value="500">0</div>
-							Contributions on GitHub
-						</div>
-						<div class="col-stat col-base col-sm-6 col-md-3 ">
-							<div class="stat-number " data-value="30 ">0</div>
-							Endorsed Skills on LinkedIn
-						</div>
-						<div class="col-stat col-base col-sm-6 col-md-3 ">
-							<div class="stat-number " data-value="50 ">0</div>
-							Lines of Code Written
-						</div>
-					</div>
-				</div>
+        <div class="section-content ">
+          <div class="row-base row ">
+            <div class="col-stat col-base col-sm-6 col-md-3 ">
+              <div class="stat-number " data-value="3.89">0.00</div>
+              /4.0 GPA
+            </div>
+            <div class="col-stat col-base col-sm-6 col-md-3 ">
+              <div class="stat-number " data-value="500">0</div>
+              Contributions on GitHub
+            </div>
+            <div class="col-stat col-base col-sm-6 col-md-3 ">
+              <div class="stat-number " data-value="30">0</div>
+              Endorsed Skills on LinkedIn
+            </div>
+            <div class="col-stat col-base col-sm-6 col-md-3 ">
+              <div class="stat-number " data-value="50">0</div>
+              Lines of Code Written
+            </div>
+          </div>
+        </div>
+
       </div>
     </section>
 
-		<section class="statistics bg-light section ">
-			<div class="container ">
-				<div class="row ">
-					<div class="stat-descr col-md-10 col-md-offset-1 ">
-						I regard technology as a powerful approach and solution to many challenges that we’re facing today. Thus, I'm driven
-						to utilize my design thinking and technical skills to make the world around us somewhat better.
-					</div>
-				</div>
-				<a href="Resume_Leon_Tao_Long.pdf " target="_blank " class="btn btn-violet ">See Resume</a>
-			</div>
-		</section>
+    <!-- Resume -->
+    <section class="promo bg-primary section-sm">
+      <div class="container">
+        <h2 class="promo-title">Download PDF Resume</h2>
+        <a href="Resume_Jason_Duan.pdf" target="_blank" class="btn btn-violet wow swing">See Resume</a>
+      </div>
+    </section>
 
     <!-- Footer -->
-
     <footer id="footer " class="footer footer-1 bg-dark ">
       <div class="container ">
         <div class="row-base row ">
@@ -205,7 +201,7 @@
               <li><a href="./index.html ">Home</a></li>
               <li><a href="./about.html ">About</a></li>
               <li><a href="./portfolio.html ">Projects</a></li>
-              <li><a href="Resume_Leon_Tao_Long.pdf" target="_blank">Resume</a></li>
+              <li><a href="Resume_Jason_Duan.pdf" target="_blank">Resume</a></li>
             </ul>
           </div>
           <div class="col-contacts col-base col-sm-6 col-md-3 footer-row2 ">
@@ -226,7 +222,6 @@
   </div>
 
   <!-- Modals -->
-
   <div id="request " class="modal fade " role="dialog ">
     <div class="modal-dialog ">
       <div class="modal-content ">
@@ -256,7 +251,6 @@
   </div>
 
   <!-- Modals success -->
-
   <div id="success " class="modal modal-message fade " role="dialog ">
     <div class="modal-dialog ">
       <div class="modal-content ">
@@ -270,7 +264,6 @@
   </div>
 
   <!-- Modals error -->
-
   <div id="error " class="modal modal-message fade " role="dialog ">
     <div class="modal-dialog ">
       <div class="modal-content ">
@@ -284,7 +277,6 @@
   </div>
 
   <!-- SCRIPTS -->
-
   <script src="js/jquery.min.js "></script>
   <script src="js/jquery.viewport.js "></script>
   <script src="js/jQuerySimpleCounter.js "></script>
