--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,7 @@
           <li><a href="./index.html">Home</a></li>
           <li><a href="./about.html">About Me</a></li>
           <li class="active"><a href="./portfolio.html">Projects</a></li>
-          <li><a href="Resume_Leon_Tao_Long.pdf" target="_blank">Resume</a></li>
+          <li><a href="Resume_Jason_Duan.pdf" target="_blank">Resume</a></li>
         </ul>
       </nav>
 
@@ -70,7 +70,7 @@
             <li><a href="./index.html">Home</a></li>
             <li><a href="./about.html">About Me</a></li>
             <li class="active"><a href="./portfolio.html">Projects</a></li>
-            <li><a href="./Resume_Leon_Tao_Long.pdf" target="_blank">Resume</a></li>
+            <li><a href="./Resume_Jason_Duan.pdf" target="_blank">Resume</a></li>
           </ul>
         </div>
       </nav>
@@ -495,7 +495,7 @@
 							<li><a href="./index.html ">Home</a></li>
 							<li><a href="./about.html ">About</a></li>
 							<li><a href="./portfolio.html ">Projects</a></li>
-							<li><a href="Resume_Leon_Tao_Long.pdf" target="_blank">Resume</a></li>
+							<li><a href="Resume_Jason_Duan.pdf" target="_blank">Resume</a></li>
 						</ul>
 					</div>
 					<div class="col-contacts col-base col-sm-6 col-md-3 footer-row2 ">
