--- a/404.html
+++ b/404.html
@@ -18,8 +18,6 @@
 <body class="comming-soon">
   
     <!-- Loader -->
-
-    
     <div class="loader">
       <div class="spinner">
         <div class="double-bounce1"></div>
@@ -57,7 +55,7 @@
             <li><a href="./index.html">Home</a></li>
             <li><a href="./about.html">About Me</a></li>
             <li><a href="./portfolio.html">Projects</a></li>
-            <li><a href="Resume_Leon_Tao_Long.pdf" target="_blank">Resume</a></li>
+            <li><a href="Resume_Jason_Duan.pdf" target="_blank">Resume</a></li>
           </ul>
         </nav>
 
@@ -69,7 +67,7 @@
               <li><a href="./index.html">Home</a></li>
               <li><a href="./about.html">About Me</a></li>
               <li><a href="./portfolio.html">Projects</a></li>
-              <li><a href="./Resume_Leon_Tao_Long.pdf" target="_blank">Resume</a></li>
+              <li><a href="./Resume_Jason_Duan.pdf" target="_blank">Resume</a></li>
             </ul>
           </div>
         </nav>
@@ -106,7 +104,7 @@
                 <li><a href="./index.html ">Home</a></li>
                 <li><a href="./about.html ">About</a></li>
                 <li><a href="./portfolio.html ">Projects</a></li>
-                <li><a href="Resume_Leon_Tao_Long.pdf" target="_blank">Resume</a></li>
+                <li><a href="Resume_Jason_Duan.pdf" target="_blank">Resume</a></li>
               </ul>
             </div>
             <div class="col-contacts col-base col-sm-6 col-md-3 footer-row2 ">
