--- a/portfolio-dataviz.html
+++ b/portfolio-dataviz.html
@@ -66,7 +66,7 @@
           </li>
           <li><a href="photo.html">Photography</a></li>
           <li>
-            <a href="Resume_Leon_Tao_Long.pdf" target="_blank">Resume</a>
+            <a href="Resume_Jason_Duan.pdf" target="_blank">Resume</a>
           </li>
         </ul>
       </nav>
@@ -87,7 +87,7 @@
             </li>
             <li><a href="./photo.html">Photography</a></li>
             <li>
-              <a href="./Resume_Leon_Tao_Long.pdf" target="_blank">Resume</a>
+              <a href="./Resume_Jason_Duan.pdf" target="_blank">Resume</a>
             </li>
           </ul>
         </div>
@@ -150,7 +150,7 @@
               <li><a href="./portfolio.html ">Projects</a></li>
               <li><a href="./about.html ">About</a></li>
               <li><a href="./photo.html ">Photography</a></li>
-              <li><a href="Resume_Leon_Tao_Long.pdf" target="_blank">Resume</a></li>
+              <li><a href="Resume_Jason_Duan.pdf" target="_blank">Resume</a></li>
             </ul>
           </div>
           <div class="col-contacts col-base col-sm-6 col-md-3 footer-row2 ">
